@@ -3272,6 +3272,62 @@ mtime=3573888533
 </article>
 </node>
 <node>
+id=498
+lv=2
+dt=Text
+nm=far.SubscribeDialogDrawEvents
+ctime=3615718962
+mtime=3615723431
+<article>
+#_result = far.SubscribeDialogDrawEvents (subscribe)
+#_
+#_**Parameters:**
+#_  subscribe:  boolean
+#_
+#_**Returns:**
+#_  result:     boolean
+#_
+#_**Description:**
+#_  This function affects the action of `export.ProcessDialogEvent`.
+#_
+#_  There is a group of frequently called events that slow down the processing,
+#_  especially in menus containing 10000+ items. This occurs due to conversion
+#_  of arguments between C and Lua.
+#_
+#_  By default `export.ProcessDialogEvent` will **not** be called for the following
+#_  values of *Param.Msg*:
+#_      `DN_CTLCOLORDIALOG`
+#_      `DN_CTLCOLORDLGITEM`
+#_      `DN_CTLCOLORDLGLIST`
+#_      `DN_DRAWDIALOG`
+#_      `DN_DRAWDIALOGDONE`
+#_      `DN_DRAWDLGITEM`
+#_      `DN_DRAWDLGITEMDONE`
+#_
+#_  In order to start receiving this group of messages, call:
+#_      far.SubscribeDialogDrawEvents(true)
+#_
+#_  In order to stop receiving this group of messages, call:
+#_      far.SubscribeDialogDrawEvents(false)
+#_
+#_  The function returns the previous state, that is the state that existed before the call.
+#_
+#_**Far API used:**
+#_  none
+#_
+#_@@@
+#_[export.ProcessDialogEvent]: 221.html
+#_[DN_CTLCOLORDIALOG]: http://api.farmanager.com/ru/dialogapi/dmsg/dn_ctlcolordialog.html
+#_[DN_CTLCOLORDLGITEM]: http://api.farmanager.com/ru/dialogapi/dmsg/dn_ctlcolordlgitem.html
+#_[DN_CTLCOLORDLGLIST]: http://api.farmanager.com/ru/dialogapi/dmsg/dn_ctlcolordlglist.html
+#_[DN_DRAWDIALOG]: http://api.farmanager.com/ru/dialogapi/dmsg/dn_drawdialog.html
+#_[DN_DRAWDIALOGDONE]: http://api.farmanager.com/ru/dialogapi/dmsg/dn_drawdialogdone.html
+#_[DN_DRAWDLGITEM]: http://api.farmanager.com/ru/dialogapi/dmsg/dn_drawdlgitem.html
+#_[DN_DRAWDLGITEMDONE]: http://api.farmanager.com/ru/dialogapi/dmsg/dn_drawdlgitemdone.html
+#_
+</article>
+</node>
+<node>
 id=285
 lv=1
 dt=Text
